[package]
name = "unity-fls-exporter"
version = "0.1.0"
authors = ["Yasin Raies <3652076+yraies@users.noreply.github.com >", "Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
prometheus = "0.13"
warp = "0.3"
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"]}
simple_logger = "2.1"
